[gd_scene load_steps=11 format=1]

[ext_resource path="res://assets/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/ingamemenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sound/typing.smp" type="Sample" id=3]
[ext_resource path="res://assets/sound/walking.smp" type="Sample" id=4]
[ext_resource path="res://assets/player/sampleplayer.gd" type="Script" id=5]
[ext_resource path="res://assets/menu/helpmenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/menu/settingsmenu.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape" id=1]

radius = 0.7
height = 0.8

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1, 1, 2 )

[sub_resource type="SampleLibrary" id=3]

samples/typing = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}
samples/walking = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[node name="Player" type="KinematicBody" groups=[
"Persist",
]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = true
collision/margin = 0.001
script/script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.90968, 0 )
projection = 0
fov = 65.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="Area" type="Area" parent="Camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.15464 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 0.314226, 0, 0, 0, 0.314226, 0, 0, 0, 0.314226, 0, 0, -0.292532 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Camera/Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.314226, 0, 0, 0, 0.314226, 0, 0, 0, 0.314226, 0, 0, -0.292532 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="IngameMenu" parent="." instance=ExtResource( 2 )]

[node name="SamplePlayer" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 2
config/samples = SubResource( 3 )
config/pitch_random = 0.0
script/script = ExtResource( 5 )

[node name="Body" type="CollisionShape" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Leg" type="RayCast" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.6, 0 )
layer_mask = 1
type_mask = 15

[node name="HelpMenu" parent="." instance=ExtResource( 6 )]

margin/left = 355.0
margin/top = 92.0
margin/right = 395.0
margin/bottom = 132.0

[node name="Settings" parent="." instance=ExtResource( 7 )]

[connection signal="area_enter" from="Camera/Area" to="." method="_on_Area_area_enter"]

[connection signal="area_exit" from="Camera/Area" to="." method="_on_Area_area_exit"]

[connection signal="body_enter" from="Camera/Area" to="." method="_on_Area_body_enter"]

[connection signal="body_exit" from="Camera/Area" to="." method="_on_Area_body_exit"]


